customer-ui/terraform/kubernetes/customer-service/docker-deployment.yml
apiVersion: v1
kind: Pod
metadata:
 name: private-reg
spec:
 containers:
 - name: private-reg-container
 image: customer-service
 imagePullSecrets:
 - name: regsecret
