customer-ui/terraform/kubernetes/customer-service/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: customer-service
  namespace: default
spec:
  rules:
  - host: customer-service.cloudguru-pk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: customer-service
          servicePort: 8080
